# stereo_calib_pipeline

./: CMakeLists.txt  README.md  example.cpp  main.cpp
check/1/: extrinsics.yml  intrinsics.yml
poseTrans/: CMakeLists.txt  main.cpp
